plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'gov.cdc.etldatapipeline'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
    maven {
        url "https://packages.confluent.io/maven"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
    implementation 'org.springframework.kafka:spring-kafka:3.1.2'
    // https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams
    implementation 'org.apache.kafka:kafka-streams:3.7.0'
    // https://mvnrepository.com/artifact/io.debezium/debezium-core
    implementation 'io.debezium:debezium-core:2.4.1.Final'
    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation 'commons-io:commons-io:2.15.0'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.0'
    // https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    // https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.3.0.jre17-preview'
    implementation 'ch.qos.logback:logback-classic'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
    annotationProcessor 'org.projectlombok:lombok'

    if (findProject(':common-util')) {
        implementation project(':common-util')
    } else {
        // this mostly needed when testing the app on idea
        implementation files('libs/common-util-0.0.1-SNAPSHOT.jar')
    }

    // https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams-test-utils
    testImplementation 'org.apache.kafka:kafka-streams-test-utils:3.7.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
